          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/openvrml-gl/OpenVRML/GL/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Use fontconfig
          for font discovery.  Refactored glyph data->polygon conversion
          to Text node implementation.

2002-12-09  Braden McDaniel  <braden@endoframe.com>

        * README, configure.ac, java/Makefile.am, java/vrml/Makefile.am,
          java/vrml/field/Makefile.am, java/vrml/node/Makefile.am,
          m4/Makefile.am, m4/jdk.m4, m4/jni.m4,
          src/openvrml/OpenVRML/ScriptJDK.cpp,
          src/openvrml/OpenVRML/ScriptJDK.h,
          src/openvrml/OpenVRML/script.cpp:  Improvements to usability
          of configure option for Script node Java support.

2002-12-08  Braden McDaniel  <braden@endoframe.com>

        * configure.ac, openvrml.pc.in:  Conditionally add mozilla-js to
          Requires in openvrml.pc.

        * configure.ac:  Fixed error in conditionally adding mozilla-js
          to Requires in openvrml.pc.

        * src/openvrml/OpenVRML/Image.cpp,
          src/openvrml/OpenVRML/MathUtils.cpp,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/private.h,
          src/openvrml/OpenVRML/script.cpp:  Quelled some warnings from
          icc 7.0.

        * configure.ac, m4/gl.m4, m4/glut.m4:  Removed --with-gl and
          --with-glut configure options.

        * COPYING, openvrml.spec.in, m4/COPYING:  Moved GPL text to m4
          directory.  The only thing we have that's GPL'd are the m4
          macros. And since they're not installed, the GPL doesn't need
          to be among our installed docs.

2002-12-08  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/vrml97node.cpp: Fix bug in FontStyle
          destructor.
